--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="assets/icons/travel.png" type="image/png">
+    <link rel="icon" href="assets/icons/Logo.svg" type="image/svg">
   </head>
   <body>
     <div class="bg-surface-color">
